--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,37 @@
-placeholder
+<html>
+<head>
+  <title>Lazyapple</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
+  <style>
+  #container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #gbutton{
+    display: block;
+    text-decoration: none;
+    background: #e74c3c;
+    height: 30px;
+    padding: 10px;
+    margin:auto;
+    text-align: center;
+    width: 200px;
+    border-radius: 3px;
+    color: white;
+    border-bottom: 2px solid #c0392b;
+  }
+  </style>
+</head>
+<body>
+  <div id="container">
+    <a href="/login" id="gbutton">Sign in with Google</a>
+
+  </div>
+
+</body>
+</html>
