Updated the front page

--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,72 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
   <link rel="stylesheet" href="style.css" charset="utf-8">
+  <link rel="stylesheet" href="facade.css" charset="utf-8">
+  <style>
+
+    #container {
+
+      height: auto;
+    }
+
+    #hero {
+      position: relative;
+      margin: 50px;
+      height: 250px;
+      background: #34495e;
+      width: 500px;
+      display: flex;
+    }
+
+    #red{
+      flex:1;
+      background: #e74c3c;
+      height: 100%;
+      margin: 0;
+    }
+
+    #blue{
+      flex:1;
+      background: #34495e;
+      height: 100%;
+      margin:0;
+    }
+
+    #white{
+      position: absolute;
+      background: #f6f6f6;
+      width: 100px;
+      height: 50px;
+      border-radius: 3px;
+      top:0;
+      bottom:0;
+      right:0;
+      left:0;
+      margin: auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .message{
+      text-align: center;
+      margin: 20px auto;
+      margin-top: 4vw;
+
+    }
+  </style>
 </head>
 <body>
+  <div class="message">Schedule your todos, Instantly.</div>
   <div id="container">
-    <a href="/login" id="gbutton">Sign in with Google</a>
-
+    <section class="facade-minimal" id="hero">
+        <div id="red"></div>
+        <div id="blue"></div>
+        <div id="white"></div>
+    </section>
   </div>
+  <a href="/login" id="gbutton">Sign in with Google</a>
+
 
 </body>
 </html>
