--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,15 @@
 <html>
 <head>
   <title>Lazyapple</title>
+  <link href='https://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
   <link rel="stylesheet" href="style.css" charset="utf-8">
   <link rel="stylesheet" href="facade.css" charset="utf-8">
+
+
   <style>
+
 
     #container {
 
@@ -51,12 +55,7 @@
       align-items: center;
     }
 
-    .message{
-      text-align: center;
-      margin: 20px auto;
-      margin-top: 4vw;
-
-    }
+    
   </style>
 </head>
 <body>
