--- a/public/noevents.html
+++ b/public/noevents.html
@@ -2,12 +2,16 @@
 <head>
   <title>Lazyapple</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href='https://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
   <link rel="stylesheet" href="style.css" charset="utf-8">
 </head>
 <body>
+  <div class="message">
+      You don't seem to have any tasks to Schedule
+  </div>
   <div id="container">
-    <a href="/todos" id="gbutton">Click here to add tasks</a>
+    <a href="/todos" id="gbutton">Add tasks</a>
 
   </div>
 
