--- a/public/tasksdone.html
+++ b/public/tasksdone.html
@@ -3,11 +3,15 @@
   <title>Lazyapple</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
+  <link href='https://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="style.css" charset="utf-8">
 </head>
 <body>
+  <div class="message">
+      Awesome!
+  </div>
   <div id="container">
-    <a href="http://calendar.google.com" id="gbutton">Click here to go to your google calendar</a>
+    <a href="http://calendar.google.com" id="gbutton">Check Google Calendar</a>
 
   </div>
 
