--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Lazyapple</title>
+  <title>Skedole</title>
   <link href='https://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
